--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,17 @@
 			<version>1.6.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
+
+		<!--		<dependency>-->
+		<!--			<groupId></groupId>-->
+		<!--			<artifactId>.aop</artifactId>-->
+		<!--		</dependency>-->
+
 
 		<!--        <dependency>
                     <groupId>io.springfox</groupId>
