Added Logging Aspects

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 logging.level.root=INFO
 logging.level.com.springboot=TRACE
 logging.file.name=/abdur/Documents/IntelliJ/webappDb/logfile/webapplogs.log
+## Spring DATASOURCE
 spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=postgres
 spring.datasource.password=none
