--- a/pom.xml
+++ b/pom.xml
@@ -38,25 +38,30 @@
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
 
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.6.6</version>
-		</dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.6</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-aop</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
 
-		<!--		<dependency>-->
-		<!--			<groupId></groupId>-->
-		<!--			<artifactId>.aop</artifactId>-->
+        <!--		<dependency>-->
+        <!--			<groupId></groupId>-->
+        <!--			<artifactId>.aop</artifactId>-->
 		<!--		</dependency>-->
 
 
